maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:10: error: not found: value sommeAngle
      do {keepHandOnSideWall()} while(sommeAngle!=0 && !isDirectionFree(Direction.NORTH))
                                      ^