maze.pledge.PledgeMaze.scala.code
override def run() {
  setDirection(Direction.NORTH)
  
  while(!estSurBiscuit()){
    if (!estFaceMur() && getDirection()==Direction.NORTH){
      avance()
    }
    else if((estFaceMur() || getDirection()!=Direction.NORTH)&& !estSurBiscuit()){
      do {keepHandOnSideWall()} while(sommeAngle!=0 && !isDirectionFree(Direction.NORTH))
    }
  }
  prendBiscuit()
}

def keepHandOnSideWall(){
  if (estFaceMur()){
    droite()
  }
  else {
    avance();gauche()
    while (!estFaceMur()){
      avance();gauche()
    }
    droite()
  }
}

def isDirectionFree(dir:Direction):Boolean ={
  var d:Direction=getDirection()
  setDirection(dir)
  if(estFaceMur()){
    setDirection(d)
    return false
  }
  else {
    setDirection(d)
    return true
  }
}